Добавил вьюхи, сериалайзеры и API схему
