# Pereval/static/openapi-schema.yml
@@ -1,7 +1,7 @@
-openapi: 3.0.0
+openapi: 3.0.2
 info:
   title: Pereval API
-  version: 1.0.0
+  version: 0.1
 
 paths:
   /users:
@@ -17,6 +17,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
+      tags:
+        - users
 
   /users/{id}:
     get:
@@ -36,6 +38,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/User'
+      tags:
+        - user_by_id
 
   /coordinates:
     get:
@@ -49,17 +53,19 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Coordinate'
+                  $ref: '#/components/schemas/Coordinates'
+      tags:
+        - coordinates
 
   /coordinates/{id}:
     get:
-      summary: Get a coordinate by ID
-      operationId: getCoordinateById
+      summary: Get a coordinates by ID
+      operationId: getCoordinatesById
       parameters:
         - name: id
           in: path
           required: true
-          description: ID of the coordinate
+          description: ID of the coordinates
           schema:
             type: integer
       responses:
@@ -68,7 +74,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Coordinate'
+                $ref: '#/components/schemas/Coordinates'
+      tags:
+        - coordinates_by_id
 
   /images:
     get:
@@ -83,6 +91,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Image'
+      tags:
+        - images
 
   /images/{id}:
     get:
@@ -102,6 +112,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Image'
+      tags:
+        - images_by_id
 
   /passes:
     get:
@@ -116,6 +128,8 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Pass'
+      tags:
+        - passes
 
   /passes/{id}:
     get:
@@ -134,7 +148,9 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Pass'
+                $ref: '#/components/schemas/MountainPass'
+      tags:
+        - pass_by_id
 
 components:
   schemas:
@@ -143,22 +159,24 @@ components:
       properties:
         id:
           type: integer
-        name:
+          readOnly: true
+        first_name:
+          type: string
+        last_name:
+          type: string
+        surname:
           type: string
         email:
           type: string
-        fam:
-          type: string
-        otc:
-          type: string
-        phone:
+        phone_number:
           type: string
 
-    Coordinate:
+    Coordinates:
       type: object
       properties:
         id:
           type: integer
+          readOnly: true
         latitude:
           type: number
         longitude:
@@ -171,16 +189,18 @@ components:
       properties:
         id:
           type: integer
+          readOnly: true
         data:
           type: string
         title:
           type: string
 
-    Pass:
+    MountainPass:
       type: object
       properties:
         id:
           type: integer
+          readOnly: true
         beauty_title:
           type: string
         title:
@@ -195,7 +215,7 @@ components:
         user:
           $ref: '#/components/schemas/User'
         coords:
-          $ref: '#/components/schemas/Coordinate'
+          $ref: '#/components/schemas/Coordinates'
         level:
           type: object
           properties:
